--- a/src/button.html
+++ b/src/button.html
@@ -1,7 +1,7 @@
 <div>
     <div ng-if="$tracker.isBusy()">
         <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
-        {{$params.message}}
+        {{$tracker.params.message}}
     </div>
     <div ng-if="!$tracker.isBusy()">
         <div ng-transclude></div>
